# APK-Editor-MCP-Server

./: .gitignore  README.md  install.md  run_server.py
apk_editor_mcp/: __init__.py  apk_editor.py  fast_dex.py  smali_utils.py
java-core/: build.gradle.kts  local.properties  settings.gradle.kts
java-core/src/main/kotlin/com/apkeditor/dex/: DexEditor.kt  Main.kt
libs/: README.md
mcp-server/: pyproject.toml
mcp-server/apk_editor_mcp/: adb_utils.py  config.py  file_utils.py  resource_utils.py  search_utils.py  server.py
mcp-server/apk_editor_mcp/tools/: __init__.py  apk_tools.py  file_tools.py  search_tools.py  smali_tools.py
