[project]
name = "apk-editor-mcp"
version = "1.0.0"
description = "APK Editor MCP Server - Like MT Manager for AI"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
apk-editor-mcp = "apk_editor_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
